Edit booking functionality and on device boot notification if live bookings present